--- a/rule-provider/Domestic.yaml
+++ b/rule-provider/Domestic.yaml
@@ -19,6 +19,8 @@ payload:
   - DOMAIN-KEYWORD,gtm-a
   - DOMAIN-KEYWORD,taobao.
   - DOMAIN-KEYWORD,xiami.
+  - DOMAIN-WILDCARD,scdn????.com
+  - DOMAIN-WILDCARD,kunlun??.com
   - DOMAIN-SUFFIX,10029.com
   - DOMAIN-SUFFIX,1688.com
   - DOMAIN-SUFFIX,17lai.org
@@ -174,27 +176,6 @@ payload:
   - DOMAIN-SUFFIX,kissyui.com
   - DOMAIN-SUFFIX,koubei.com
   - DOMAIN-SUFFIX,kuku123.com
-  - DOMAIN-SUFFIX,kunlunaq.com
-  - DOMAIN-SUFFIX,kunlunar.com
-  - DOMAIN-SUFFIX,kunlunca.com
-  - DOMAIN-SUFFIX,kunluncan.com
-  - DOMAIN-SUFFIX,kunlundns.com
-  - DOMAIN-SUFFIX,kunlunea.com
-  - DOMAIN-SUFFIX,kunlungem.com
-  - DOMAIN-SUFFIX,kunlungr.com
-  - DOMAIN-SUFFIX,kunlunhuf.com
-  - DOMAIN-SUFFIX,kunlunle.com
-  - DOMAIN-SUFFIX,kunlunli.com
-  - DOMAIN-SUFFIX,kunlunno.com
-  - DOMAIN-SUFFIX,kunlunpi.com
-  - DOMAIN-SUFFIX,kunlunra.com
-  - DOMAIN-SUFFIX,kunlunsa.com
-  - DOMAIN-SUFFIX,kunlunsc.com
-  - DOMAIN-SUFFIX,kunlunsl.com
-  - DOMAIN-SUFFIX,kunlunso.com
-  - DOMAIN-SUFFIX,kunlunta.com
-  - DOMAIN-SUFFIX,kunlunvi.com
-  - DOMAIN-SUFFIX,kunlunwe.com
   - DOMAIN-SUFFIX,laifeng.com
   - DOMAIN-SUFFIX,laiwang.com
   - DOMAIN-SUFFIX,linezing.com
@@ -242,108 +223,6 @@ payload:
   - DOMAIN-SUFFIX,redfcv.com
   - DOMAIN-SUFFIX,rergdfh.com
   - DOMAIN-SUFFIX,rhinokeen.com
-  - DOMAIN-SUFFIX,scdn0077.com
-  - DOMAIN-SUFFIX,scdn08xd.com
-  - DOMAIN-SUFFIX,scdn0wcp.com
-  - DOMAIN-SUFFIX,scdn0wes.com
-  - DOMAIN-SUFFIX,scdn0xks.com
-  - DOMAIN-SUFFIX,scdn10a7.com
-  - DOMAIN-SUFFIX,scdn12zo.com
-  - DOMAIN-SUFFIX,scdn1dcz.com
-  - DOMAIN-SUFFIX,scdn1eul.com
-  - DOMAIN-SUFFIX,scdn1kjh.com
-  - DOMAIN-SUFFIX,scdn2kw9.com
-  - DOMAIN-SUFFIX,scdn2lhh.com
-  - DOMAIN-SUFFIX,scdn323r.com
-  - DOMAIN-SUFFIX,scdn329g.com
-  - DOMAIN-SUFFIX,scdn3t09.com
-  - DOMAIN-SUFFIX,scdn40kn.com
-  - DOMAIN-SUFFIX,scdn43uu.com
-  - DOMAIN-SUFFIX,scdn46r9.com
-  - DOMAIN-SUFFIX,scdn4cpe.com
-  - DOMAIN-SUFFIX,scdn4esv.com
-  - DOMAIN-SUFFIX,scdn4iy4.com
-  - DOMAIN-SUFFIX,scdn4usw.com
-  - DOMAIN-SUFFIX,scdn549v.com
-  - DOMAIN-SUFFIX,scdn67mw.com
-  - DOMAIN-SUFFIX,scdn6e40.com
-  - DOMAIN-SUFFIX,scdn7c4e.com
-  - DOMAIN-SUFFIX,scdn7gsf.com
-  - DOMAIN-SUFFIX,scdn7ma2.com
-  - DOMAIN-SUFFIX,scdn8ksq.com
-  - DOMAIN-SUFFIX,scdn8ppt.com
-  - DOMAIN-SUFFIX,scdn98um.com
-  - DOMAIN-SUFFIX,scdnacsj.com
-  - DOMAIN-SUFFIX,scdnazo0.com
-  - DOMAIN-SUFFIX,scdnbi9w.com
-  - DOMAIN-SUFFIX,scdnbiar.com
-  - DOMAIN-SUFFIX,scdnc77s.com
-  - DOMAIN-SUFFIX,scdndn0v.com
-  - DOMAIN-SUFFIX,scdndsa6.com
-  - DOMAIN-SUFFIX,scdndtma.com
-  - DOMAIN-SUFFIX,scdne3lt.com
-  - DOMAIN-SUFFIX,scdne60t.com
-  - DOMAIN-SUFFIX,scdneb5k.com
-  - DOMAIN-SUFFIX,scdneufe.com
-  - DOMAIN-SUFFIX,scdnf3v6.com
-  - DOMAIN-SUFFIX,scdnfu51.com
-  - DOMAIN-SUFFIX,scdngs0h.com
-  - DOMAIN-SUFFIX,scdnguqg.com
-  - DOMAIN-SUFFIX,scdnh957.com
-  - DOMAIN-SUFFIX,scdnhagn.com
-  - DOMAIN-SUFFIX,scdnhfua.com
-  - DOMAIN-SUFFIX,scdnhou6.com
-  - DOMAIN-SUFFIX,scdnifld.com
-  - DOMAIN-SUFFIX,scdnioyt.com
-  - DOMAIN-SUFFIX,scdnirdl.com
-  - DOMAIN-SUFFIX,scdnj8do.com
-  - DOMAIN-SUFFIX,scdnjfj2.com
-  - DOMAIN-SUFFIX,scdnjk59.com
-  - DOMAIN-SUFFIX,scdnkeuo.com
-  - DOMAIN-SUFFIX,scdnl05m.com
-  - DOMAIN-SUFFIX,scdnl46h.com
-  - DOMAIN-SUFFIX,scdnmba2.com
-  - DOMAIN-SUFFIX,scdnmnrz.com
-  - DOMAIN-SUFFIX,scdnmskl.com
-  - DOMAIN-SUFFIX,scdnndj2.com
-  - DOMAIN-SUFFIX,scdnnm9o.com
-  - DOMAIN-SUFFIX,scdnnrib.com
-  - DOMAIN-SUFFIX,scdnnub6.com
-  - DOMAIN-SUFFIX,scdno55z.com
-  - DOMAIN-SUFFIX,scdnoklx.com
-  - DOMAIN-SUFFIX,scdnokqh.com
-  - DOMAIN-SUFFIX,scdnooyg.com
-  - DOMAIN-SUFFIX,scdnpe31.com
-  - DOMAIN-SUFFIX,scdnq6rc.com
-  - DOMAIN-SUFFIX,scdnqjg9.com
-  - DOMAIN-SUFFIX,scdnqkxi.com
-  - DOMAIN-SUFFIX,scdnqo8s.com
-  - DOMAIN-SUFFIX,scdnqrty.com
-  - DOMAIN-SUFFIX,scdnqumc.com
-  - DOMAIN-SUFFIX,scdnr7p2.com
-  - DOMAIN-SUFFIX,scdnr932.com
-  - DOMAIN-SUFFIX,scdnsmjc.com
-  - DOMAIN-SUFFIX,scdnsvg4.com
-  - DOMAIN-SUFFIX,scdnt1h7.com
-  - DOMAIN-SUFFIX,scdnt9n9.com
-  - DOMAIN-SUFFIX,scdntucs.com
-  - DOMAIN-SUFFIX,scdntxla.com
-  - DOMAIN-SUFFIX,scdnukio.com
-  - DOMAIN-SUFFIX,scdnulx9.com
-  - DOMAIN-SUFFIX,scdnv7uq.com
-  - DOMAIN-SUFFIX,scdnvij7.com
-  - DOMAIN-SUFFIX,scdnw4kb.com
-  - DOMAIN-SUFFIX,scdnwehb.com
-  - DOMAIN-SUFFIX,scdnwljp.com
-  - DOMAIN-SUFFIX,scdnwmp0.com
-  - DOMAIN-SUFFIX,scdnwpqy.com
-  - DOMAIN-SUFFIX,scdnwwp9.com
-  - DOMAIN-SUFFIX,scdnxgev.com
-  - DOMAIN-SUFFIX,scdny1t3.com
-  - DOMAIN-SUFFIX,scdnydiw.com
-  - DOMAIN-SUFFIX,scdnywwp.com
-  - DOMAIN-SUFFIX,scdnzrch.com
-  - DOMAIN-SUFFIX,searchtb.com
   - DOMAIN-SUFFIX,serverlessfans.com 
   - DOMAIN-SUFFIX,serverlessfans.net
   - DOMAIN-SUFFIX,shenjing.com
@@ -503,8 +382,7 @@ payload:
   - DOMAIN-SUFFIX,stargame.com
   - DOMAIN-SUFFIX,dianwanbus.net
 # > Baidu
-  - DOMAIN-KEYWORD,baidu-
-  - DOMAIN-KEYWORD,baidu.
+  - DOMAIN-KEYWORD,baidu
   - DOMAIN-KEYWORD,yjs-cdn
   - DOMAIN-KEYWORD,yunjiasu
   - DOMAIN-SUFFIX,17swan.com
@@ -515,27 +393,6 @@ payload:
   - DOMAIN-SUFFIX,apollo-share.com
   - DOMAIN-SUFFIX,apollo.auto
   - DOMAIN-SUFFIX,baeapps.com
-  - DOMAIN-SUFFIX,baiduads.com
-  - DOMAIN-SUFFIX,baiduapp.com
-  - DOMAIN-SUFFIX,baidubce.com
-  - DOMAIN-SUFFIX,baidubce.net
-  - DOMAIN-SUFFIX,baidubos.com
-  - DOMAIN-SUFFIX,baiducloudapi.com
-  - DOMAIN-SUFFIX,baiducontent.com
-  - DOMAIN-SUFFIX,baiduhui.com
-  - DOMAIN-SUFFIX,baidupcs.com
-  - DOMAIN-SUFFIX,baidupcs.net
-  - DOMAIN-SUFFIX,baidustatic.com
-  - DOMAIN-SUFFIX,baiduux.com
-  - DOMAIN-SUFFIX,baiduwaf.com
-  - DOMAIN-SUFFIX,baiduwebgame.com
-  - DOMAIN-SUFFIX,baiduxiaodai.com
-  - DOMAIN-SUFFIX,baiduyangguang.org
-  - DOMAIN-SUFFIX,baiduyuncdn.com
-  - DOMAIN-SUFFIX,baiduyuncdn.net
-  - DOMAIN-SUFFIX,baiduyundns.com
-  - DOMAIN-SUFFIX,baiduyundns.net
-  - DOMAIN-SUFFIX,baiduyunwaf.com
   - DOMAIN-SUFFIX,baifubao.com
   - DOMAIN-SUFFIX,baihangbao.com
   - DOMAIN-SUFFIX,baihangdai.com
@@ -1266,16 +1123,7 @@ payload:
   - DOMAIN-SUFFIX,dnspod.net
   - DOMAIN-SUFFIX,dnspod.com
   - DOMAIN-SUFFIX,dnspod.org
-  - DOMAIN-SUFFIX,dnsv5.com
-  - DOMAIN-SUFFIX,dnsv1.com
-  - DOMAIN-SUFFIX,dnsv3.com
-  - DOMAIN-SUFFIX,dnsv4.com
-  - DOMAIN-SUFFIX,dnsv2.com
-  - DOMAIN-SUFFIX,dnsv1.net
-  - DOMAIN-SUFFIX,dnsv5.net
-  - DOMAIN-SUFFIX,dnsv3.net
-  - DOMAIN-SUFFIX,dnsv4.net
-  - DOMAIN-SUFFIX,dnsv2.net
+  - DOMAIN-WILDCARD,dnsv?.com
   - DOMAIN-SUFFIX,domainexpired-dnspod.com
   - DOMAIN-SUFFIX,httpdns.pub
   - DOMAIN-SUFFIX,httpdns.pro
@@ -1764,29 +1612,11 @@ payload:
 # > Kugou
   - DOMAIN-SUFFIX,kugou.com
 # > Lanzou
+  - DOMAIN-WILDCARD,lanzou?.com
   - DOMAIN-SUFFIX,baidupan.com
-  - DOMAIN-SUFFIX,lanzoui.com
-  - DOMAIN-SUFFIX,lanzoup.com
-  - DOMAIN-SUFFIX,lanzoub.com
-  - DOMAIN-SUFFIX,lanzoul.com
-  - DOMAIN-SUFFIX,lanzouo.com
-  - DOMAIN-SUFFIX,lanzouq.com
-  - DOMAIN-SUFFIX,lanzoug.com
-  - DOMAIN-SUFFIX,lanzout.com
-  - DOMAIN-SUFFIX,lanzouf.com
-  - DOMAIN-SUFFIX,lanzoux.com
-  - DOMAIN-SUFFIX,lanzouw.com
-  - DOMAIN-SUFFIX,lanzouy.com
-  - DOMAIN-SUFFIX,lanzouj.com
-  - DOMAIN-SUFFIX,lanzouv.com
-  - DOMAIN-SUFFIX,lanzoum.com
   - DOMAIN-SUFFIX,woozooo.com
-  - DOMAIN-SUFFIX,lanzouh.com
-  - DOMAIN-SUFFIX,lanzous.com
   - DOMAIN-SUFFIX,lanzou.com
-  - DOMAIN-SUFFIX,lanzoue.com
   - DOMAIN-SUFFIX,lanosso.com
-  - DOMAIN-SUFFIX,lanzouc.com
   - DOMAIN-SUFFIX,lanrar.com
 # > LeTV
   - DOMAIN-SUFFIX,le.com
@@ -1887,32 +1717,13 @@ payload:
   - DOMAIN-SUFFIX,mydrivers.com
   - DOMAIN-SUFFIX,kkeji.com
 # > Mingfuyun
+  - DOMAIN-WILDCARD,cjjd??.com
   - DOMAIN-SUFFIX,p2pcdn.com
   - DOMAIN-SUFFIX,mingfucloud.com
   - DOMAIN-SUFFIX,xaidc.com
   - DOMAIN-SUFFIX,meaningfulcloud.com
   - DOMAIN-SUFFIX,mingfuyun.com
-  - DOMAIN-SUFFIX,cjjd08.com
-  - DOMAIN-SUFFIX,cjjd01.com
-  - DOMAIN-SUFFIX,cjjd09.com
-  - DOMAIN-SUFFIX,cjjd06.com
-  - DOMAIN-SUFFIX,cjjd15.com
-  - DOMAIN-SUFFIX,cjjd05.com
-  - DOMAIN-SUFFIX,cjjd07.com
-  - DOMAIN-SUFFIX,cjjd03.com
   - DOMAIN-SUFFIX,mingfudns.com
-  - DOMAIN-SUFFIX,cjjd16.com
-  - DOMAIN-SUFFIX,cjjd19.com
-  - DOMAIN-SUFFIX,cjjd13.com
-  - DOMAIN-SUFFIX,cjjd12.com
-  - DOMAIN-SUFFIX,cjjd17.com
-  - DOMAIN-SUFFIX,cjjd14.com
-  - DOMAIN-SUFFIX,cjjd02.com
-  - DOMAIN-SUFFIX,cjjd04.com
-  - DOMAIN-SUFFIX,cjjd20.com
-  - DOMAIN-SUFFIX,cjjd18.com
-  - DOMAIN-SUFFIX,cjjd10.com
-  - DOMAIN-SUFFIX,cjjd11.com
 # > NetEase
   - DOMAIN-SUFFIX,126.am
   - DOMAIN-SUFFIX,126.com
