--- a/rule-provider/Domestic.yaml
+++ b/rule-provider/Domestic.yaml
@@ -2433,6 +2433,13 @@ payload:
   - DOMAIN-KEYWORD,tencent.
   - DOMAIN-KEYWORD,tencentcloud
   - DOMAIN-KEYWORD,wechat.
+  - DOMAIN-REGEX,qcloud*.com
+  - DOMAIN-REGEX,dcloud*.com
+  - DOMAIN-REGEX,dcloud*.net
+  - DOMAIN-REGEX,tencent*.com
+  - DOMAIN-WILDCARD,tdnsv?.com
+  - DOMAIN-REGEX,tcloud*.net
+  - DOMAIN-REGEX,tcloud*.com
   - DOMAIN-SUFFIX,1010gamer.com
   - DOMAIN-SUFFIX,17look.com
   - DOMAIN-SUFFIX,17roco.com
@@ -2496,14 +2503,6 @@ payload:
   - DOMAIN-SUFFIX,dayucdntip.com
   - DOMAIN-SUFFIX,dayugf.com
   - DOMAIN-SUFFIX,dayugslb.com
-  - DOMAIN-SUFFIX,dcloudlive.com
-  - DOMAIN-SUFFIX,dcloudlive.net
-  - DOMAIN-SUFFIX,dcloudsp.com
-  - DOMAIN-SUFFIX,dcloudsp.net
-  - DOMAIN-SUFFIX,dcloudstc.com
-  - DOMAIN-SUFFIX,dcloudstc.net
-  - DOMAIN-SUFFIX,dcloudvod.com
-  - DOMAIN-SUFFIX,dcloudvod.net
   - DOMAIN-SUFFIX,developwechat.com
   - DOMAIN-SUFFIX,developweixin.com
   - DOMAIN-SUFFIX,devweixin.com
@@ -2525,16 +2524,7 @@ payload:
   - DOMAIN-SUFFIX,fsllq.com
   - DOMAIN-SUFFIX,fyec.net
   - DOMAIN-SUFFIX,fyeds.com
-  - DOMAIN-SUFFIX,fyeds0.com
-  - DOMAIN-SUFFIX,fyeds1.com
-  - DOMAIN-SUFFIX,fyeds2.com
-  - DOMAIN-SUFFIX,fyeds3.com
-  - DOMAIN-SUFFIX,fyeds4.com
-  - DOMAIN-SUFFIX,fyeds5.com
-  - DOMAIN-SUFFIX,fyeds6.com
-  - DOMAIN-SUFFIX,fyeds7.com
-  - DOMAIN-SUFFIX,fyeds8.com
-  - DOMAIN-SUFFIX,fyeds9.com
+  - DOMAIN-WILDCARD,fyeds?.com
   - DOMAIN-SUFFIX,g-proxy.com
   - DOMAIN-SUFFIX,gaapqcloud.com
   - DOMAIN-SUFFIX,gamebonfire.com
@@ -2651,25 +2641,6 @@ payload:
   - DOMAIN-SUFFIX,pubghelper.com
   - DOMAIN-SUFFIX,pubgtool.com
   - DOMAIN-SUFFIX,qbview.com
-  - DOMAIN-SUFFIX,qcloud.com
-  - DOMAIN-SUFFIX,qcloud.la
-  - DOMAIN-SUFFIX,qcloudapps.com
-  - DOMAIN-SUFFIX,qcloudcdn.com
-  - DOMAIN-SUFFIX,qcloudcjgj.com
-  - DOMAIN-SUFFIX,qcloudcos.com
-  - DOMAIN-SUFFIX,qcloudcos.net
-  - DOMAIN-SUFFIX,qclouder.com
-  - DOMAIN-SUFFIX,qcloudestate.com
-  - DOMAIN-SUFFIX,qcloudimg.com
-  - DOMAIN-SUFFIX,qcloudipv6.com
-  - DOMAIN-SUFFIX,qcloudmarket.com
-  - DOMAIN-SUFFIX,qcloudns.com
-  - DOMAIN-SUFFIX,qcloudsmartiot.com
-  - DOMAIN-SUFFIX,qcloudtiw.com
-  - DOMAIN-SUFFIX,qcloudtrip.com
-  - DOMAIN-SUFFIX,qcloudwaf.com
-  - DOMAIN-SUFFIX,qcloudwzgj.com
-  - DOMAIN-SUFFIX,qcloudzygj.com
   - DOMAIN-SUFFIX,qcly.xyz
   - DOMAIN-SUFFIX,qdcloudsolution.com
   - DOMAIN-SUFFIX,qiejingsu.com
@@ -2772,75 +2743,10 @@ payload:
   - DOMAIN-SUFFIX,tcdnvodbak.com
   - DOMAIN-SUFFIX,tcdnvp.co
   - DOMAIN-SUFFIX,tcfmglobal.com
-  - DOMAIN-SUFFIX,tcloudbase.com
-  - DOMAIN-SUFFIX,tcloudbaseapi.com
-  - DOMAIN-SUFFIX,tcloudbaseapp.com
-  - DOMAIN-SUFFIX,tcloudbasestatic.com
-  - DOMAIN-SUFFIX,tcloudhw.com
-  - DOMAIN-SUFFIX,tcloudhw.net
-  - DOMAIN-SUFFIX,tcloudscdn.com
-  - DOMAIN-SUFFIX,tcloudscdn.net
   - DOMAIN-SUFFIX,tdlcdn.com
-  - DOMAIN-SUFFIX,tdnsv1.com
-  - DOMAIN-SUFFIX,tdnsv11.com
-  - DOMAIN-SUFFIX,tdnsv2.com
-  - DOMAIN-SUFFIX,tdnsv3.com
-  - DOMAIN-SUFFIX,tdnsv4.com
-  - DOMAIN-SUFFIX,tdnsv5.com
-  - DOMAIN-SUFFIX,tdnsv5.net
-  - DOMAIN-SUFFIX,tdnsv6.com
-  - DOMAIN-SUFFIX,tdnsv7.com
-  - DOMAIN-SUFFIX,tdnsv8.com
   - DOMAIN-SUFFIX,ten.design
   - DOMAIN-SUFFIX,tencdns.com
   - DOMAIN-SUFFIX,tencdns.net
-  - DOMAIN-SUFFIX,tencentac.com
-  - DOMAIN-SUFFIX,tencentads.com
-  - DOMAIN-SUFFIX,tencentads.net
-  - DOMAIN-SUFFIX,tencentadx.com
-  - DOMAIN-SUFFIX,tencentapp.com
-  - DOMAIN-SUFFIX,tencentapps.com
-  - DOMAIN-SUFFIX,tencentcdb.com
-  - DOMAIN-SUFFIX,tencentclb.com
-  - DOMAIN-SUFFIX,tencentcomics.com
-  - DOMAIN-SUFFIX,tencentcos.com
-  - DOMAIN-SUFFIX,tencentcs.com
-  - DOMAIN-SUFFIX,tencentdayu.com
-  - DOMAIN-SUFFIX,tencentdb.com
-  - DOMAIN-SUFFIX,tencentdevices.com
-  - DOMAIN-SUFFIX,tencentdigitalassistant.com
-  - DOMAIN-SUFFIX,tencentdmp.com
-  - DOMAIN-SUFFIX,tencentedi.com
-  - DOMAIN-SUFFIX,tencentehs.com
-  - DOMAIN-SUFFIX,tencentelasticsearch.com
-  - DOMAIN-SUFFIX,tencentexpert.com
-  - DOMAIN-SUFFIX,tencentff.com
-  - DOMAIN-SUFFIX,tencentfilm.com
-  - DOMAIN-SUFFIX,tencentfoundation.org
-  - DOMAIN-SUFFIX,tencentgames.co
-  - DOMAIN-SUFFIX,tencentgames.us
-  - DOMAIN-SUFFIX,tencentgse.com
-  - DOMAIN-SUFFIX,tencentgy.com
-  - DOMAIN-SUFFIX,tencenthangjia.com
-  - DOMAIN-SUFFIX,tencentimage.com
-  - DOMAIN-SUFFIX,tencentimage.net
-  - DOMAIN-SUFFIX,tencentiot.net
-  - DOMAIN-SUFFIX,tencentipv6.com
-  - DOMAIN-SUFFIX,tencentlegalservices.com
-  - DOMAIN-SUFFIX,tencentlink.com
-  - DOMAIN-SUFFIX,tencentlog.com
-  - DOMAIN-SUFFIX,tencentmind.com
-  - DOMAIN-SUFFIX,tencentoa.com
-  - DOMAIN-SUFFIX,tencentoceanus.com
-  - DOMAIN-SUFFIX,tencentpay.com
-  - DOMAIN-SUFFIX,tencentpic.com
-  - DOMAIN-SUFFIX,tencentresearch.com
-  - DOMAIN-SUFFIX,tencentserverless.com
-  - DOMAIN-SUFFIX,tencentsource.com
-  - DOMAIN-SUFFIX,tencentstart.com
-  - DOMAIN-SUFFIX,tencentwukong.com
-  - DOMAIN-SUFFIX,tencentyouth.com
-  - DOMAIN-SUFFIX,tencentyun.com
   - DOMAIN-SUFFIX,tencity.com
   - DOMAIN-SUFFIX,tengmed.com
   - DOMAIN-SUFFIX,tengyunqq.com
@@ -3075,18 +2981,10 @@ payload:
   - DOMAIN-SUFFIX,xunlei.net
 # > Xiaogou
   - DOMAIN-SUFFIX,xgdq.com
-  - DOMAIN-SUFFIX,xiaogou555.com
-  - DOMAIN-SUFFIX,xiaogou888.com
-  - DOMAIN-SUFFIX,xiaogou999.com
+  - DOMAIN-WILDCARD,xiaogou???.com
   - DOMAIN-SUFFIX,puppy888.com
-  - DOMAIN-SUFFIX,xiaogou666.com
-  - DOMAIN-SUFFIX,xiaogou777.com
   - DOMAIN-SUFFIX,xiaogouds.com
   - DOMAIN-SUFFIX,8moom.com
-  - DOMAIN-SUFFIX,xiaogou111.com
-  - DOMAIN-SUFFIX,xiaogou333.com
-  - DOMAIN-SUFFIX,xiaogou444.com
-  - DOMAIN-SUFFIX,xiaogou222.com
   - DOMAIN-SUFFIX,moomv.com
   - DOMAIN-SUFFIX,zhongyangweixiu.com
   - DOMAIN-SUFFIX,xiaogouzhineng.com
