--- a/rule-provider/Domestic.yaml
+++ b/rule-provider/Domestic.yaml
@@ -2877,10 +2877,12 @@ payload:
   - DOMAIN-SUFFIX,zhixunfang.com
   - DOMAIN-SUFFIX,zulllv.com
   - IP-CIDR,19.28.0.0/23,no-resolve
+  - IP-CIDR,43.154.192.0/18,no-resolve
   - IP-CIDR,45.40.192.0/19,no-resolve
   - IP-CIDR,49.51.0.0/16,no-resolve
   - IP-CIDR,62.234.0.0/16,no-resolve
   - IP-CIDR,94.191.0.0/17,no-resolve
+  - IP-CIDR,101.33.17.0/24,no-resolve
   - IP-CIDR,103.7.28.0/22,no-resolve
   - IP-CIDR,103.116.50.0/23,no-resolve
   - IP-CIDR,103.231.60.0/24,no-resolve
@@ -2896,6 +2898,7 @@ payload:
   - IP-CIDR,129.28.0.0/16,no-resolve
   - IP-CIDR,129.204.0.0/16,no-resolve
   - IP-CIDR,129.211.0.0/16,no-resolve
+  - IP-CIDR,129.226.96.0/20,no-resolve
   - IP-CIDR,132.232.0.0/16,no-resolve
   - IP-CIDR,134.175.0.0/16,no-resolve
   - IP-CIDR,146.56.192.0/18,no-resolve
