--- a/rule-provider/Domestic.yaml
+++ b/rule-provider/Domestic.yaml
@@ -2431,7 +2431,7 @@ payload:
   - DOMAIN-KEYWORD,discuz.
   - DOMAIN-KEYWORD,qq.
   - DOMAIN-KEYWORD,tencent-
-  - DOMAIN-REGEX,tencent*.com
+  - DOMAIN-WILDCARD,tencent*.com
   - DOMAIN-KEYWORD,tencentcloud
   - DOMAIN-KEYWORD,wechat.
   - DOMAIN-REGEX,qcloud*.com
