--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -1049,4 +1049,4 @@ payload:
   - DOMAIN-SUFFIX,code.org
   - DOMAIN-SUFFIX,wordpress.org
   - DOMAIN-SUFFIX,crates.io
-
+  - DOMAIN-SUFFIX,online-metrix.net
