--- a/rule-provider/Special.yaml
+++ b/rule-provider/Special.yaml
@@ -51,6 +51,7 @@ payload:
   - DOMAIN-SUFFIX,kr.pro.xns.one
   - DOMAIN-SUFFIX,sg.kahkee.xns.one
   - DOMAIN-SUFFIX,vxcdn.novaxns.one
+  - DOMAIN-SUFFIX,v.xns.one
   - IP-CIDR,103.150.8.98/32,no-resolve
   - IP-CIDR,103.143.81.71/32,no-resolve
   - IP-CIDR,47.239.81.175/32,no-resolve
@@ -138,3 +139,4 @@ payload:
 # > Qiyoubooster
   - PROCESS-NAME,qy_acc
   - DOMAIN-SUFFIX,ljbmq.qiyou.cn
+
