--- a/rule-provider/Special.yaml
+++ b/rule-provider/Special.yaml
@@ -52,6 +52,7 @@ payload:
   - DOMAIN-SUFFIX,sg.kahkee.xns.one
   - DOMAIN-SUFFIX,vxcdn.novaxns.one
   - DOMAIN-SUFFIX,v.xns.one
+  - DOMAIN-SUFFIX,212.102.50.50/32,no-resolve
   - IP-CIDR,46.3.26.20/32,no-resolve
   - IP-CIDR,103.150.8.98/32,no-resolve
   - IP-CIDR,103.143.81.71/32,no-resolve
@@ -140,5 +141,6 @@ payload:
 # > Qiyoubooster
   - PROCESS-NAME,qy_acc
   - DOMAIN-SUFFIX,ljbmq.qiyou.cn
+
 
 
