--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -1050,3 +1050,4 @@ payload:
   - DOMAIN-SUFFIX,wordpress.org
   - DOMAIN-SUFFIX,crates.io
   - DOMAIN-SUFFIX,online-metrix.net
+  - DOMAIN-SUFFIX,npr.org
