--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -1061,4 +1061,4 @@ payload:
   - DOMAIN-SUFFIX,crates.io
   - DOMAIN-SUFFIX,online-metrix.net
   - DOMAIN-SUFFIX,npr.org
-
+  - DOMAIN-SUFFIX,bugsplat.com
